# ada

./: .gitignore  CMakeLists.txt  README.md  run_benchmark.sh
backend/: CMakeLists.txt  run_benchmark.sh
backend/code/: config.txt  main.cpp
backend/code/benchmark/config/higgs/: config_a0_S2400_s240_q2_M3600_m1200.txt  config_a0_S2400_s240_q4_M3600_m1200.txt  config_a0_S2400_s240_q5_M3600_m1200.txt  config_a0_S3000_s300_q2_M4500_m1500.txt  config_a0_S3000_s300_q3_M4500_m1500.txt  config_a0_S3000_s300_q6_M4500_m1500.txt  config_a0_S3000_s300_q7_M4500_m1500.txt  config_a0_S3600_s360_q4_M5400_m1800.txt  config_a0_S3600_s360_q5_M5400_m1800.txt  config_a0_S3600_s360_q6_M5400_m1800.txt  config_a0_S4200_s420_q1_M6300_m2100.txt  config_a0_S4200_s420_q5_M6300_m2100.txt  config_a0_S4200_s420_q6_M6300_m2100.txt  config_a1_S2400_s240_q10_M3600_m1200.txt  config_a1_S2400_s240_q1_M3600_m1200.txt  config_a1_S2400_s240_q5_M3600_m1200.txt  config_a1_S3000_s300_q10_M4500_m1500.txt  config_a1_S3000_s300_q1_M4500_m1500.txt  config_a1_S3000_s300_q2_M4500_m1500.txt  config_a1_S3000_s300_q4_M4500_m1500.txt  config_a1_S3000_s300_q5_M4500_m1500.txt  config_a1_S3600_s360_q10_M5400_m1800.txt  config_a1_S3600_s360_q3_M5400_m1800.txt  (+6 more)
backend/code/dataset/: dummy_data.py
backend/code/routing/: SignalHandler.cpp  SignalHandler.h
backend/code/scripts/neo4j/: compare_results.py  compute_results.py
backend/code/scripts/parameter_selection/: baseline_config.txt  baseline_config_2.txt  baseline_config_4.txt
backend/code/source/: fsa.h  sink.h  streaming_graph.h
code/: adwin.cpp  config.txt  (+5 more)
(+2056 files in other folders)
